# stuze

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
stuze/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
stuze/db/: base.py  utils.py
stuze/db/dao/: dummy_dao.py
stuze/db/migrations/: env.py
stuze/db/models/: __init__.py  dummy_model.py
stuze/services/: __init__.py
stuze/services/redis/: lifetime.py
stuze/tests/: __init__.py  test_dummy.py
stuze/web/: __init__.py  application.py  lifetime.py
stuze/web/api/: __init__.py  router.py
stuze/web/api/dummy/: __init__.py  views.py
stuze/web/api/echo/: __init__.py  views.py
stuze/web/api/monitoring/: __init__.py
stuze/web/api/redis/: __init__.py  views.py
